src/test/ui/impl-trait/nested-return-type2.stderr
error[E0277]: the trait bound `impl Send: Duh` is not satisfied
  --> $DIR/nested-return-type2.rs:21:13
   |
LL | fn foo() -> impl Trait<Assoc = impl Send> {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Duh` is not implemented for `impl Send`
   |
note: required because of the requirements on the impl of `Trait` for `[closure@$DIR/nested-return-type2.rs:24:5: 24:10]`
  --> $DIR/nested-return-type2.rs:12:31
   |
LL | impl<R: Duh, F: FnMut() -> R> Trait for F {
   |                               ^^^^^     ^

error[E0277]: the trait bound `impl Send: Duh` is not satisfied
  --> $DIR/nested-return-type2.rs:21:43
   |
LL |   fn foo() -> impl Trait<Assoc = impl Send> {
   |  ___________________________________________^
LL | |
LL | |
LL | |     || 42
LL | | }
   | |_^ the trait `Duh` is not implemented for `impl Send`
   |
note: required because of the requirements on the impl of `Trait` for `[closure@$DIR/nested-return-type2.rs:24:5: 24:10]`
  --> $DIR/nested-return-type2.rs:12:31
   |
LL | impl<R: Duh, F: FnMut() -> R> Trait for F {
   |                               ^^^^^     ^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
